Fixed port and url issues

--- a/client.html
+++ b/client.html
@@ -8,7 +8,7 @@
         // get img dom element
         const img = document.querySelector('img');
         
-        const WS_URL = 'ws://localhost:3001';
+        const WS_URL = location.origin.replace(/^http/, 'ws');
         const ws = new WebSocket(WS_URL);
         ws.onopen = () => console.log(`Connected to ${WS_URL}`);
         ws.onmessage = message => {
