--- a/streamer.html
+++ b/streamer.html
@@ -20,7 +20,7 @@
             const data = canvas.toDataURL('image/png');
             return data;
         }
-        const WS_URL = 'ws://localhost:3001';
+        const WS_URL = location.origin.replace(/^http/, 'ws');
         const FPS = 3;
         const ws = new WebSocket(WS_URL);
         ws.onopen = () => {
