--- a/streamer.html
+++ b/streamer.html
@@ -10,7 +10,7 @@
 
         navigator.mediaDevices.getUserMedia({
             video: true,
-            audio: false
+            audio: true
         }).then(stream => {
         video.srcObject = stream
         stream.onactive = e => console.log(e)
